// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch component Component with all props matches snapshot 1`] = `
<SvgMock
  accessible={true}
  focusable={true}
  height="25"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  width="25"
/>
`;

exports[`Switch component Component with only necessary props matches snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#ededed",
        "borderRadius": 50,
        "height": 16,
        "width": 34,
      },
    ]
  }
  value={false}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#e0e0e0",
          "borderRadius": 10,
          "height": 20,
          "left": -3,
          "position": "absolute",
          "top": -2,
          "width": 20,
          "zIndex": 1,
        },
      ]
    }
    value={false}
  />
</View>
`;
